fixed small text visiblity issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ body {
 	padding: 0 0 0 20px;
 	position: absolute;
 	text-decoration: none;
-	top: 264px;
+	top: 153px;
 	width: 222px;
 	z-index: 3;
 }
